# cmake-boilerplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  ReleaseNotes.txt  compile_flags.txt  imgui.ini  meson.build
.github/workflows/: build.yml
cmake/: cpack.cmake  dependencies.cmake  functions.cmake  gpu.cmake  version.h.cmake
cmake/modules/: boost.cmake  cgal.cmake  cppzmq.cmake  ffmpeg.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  jsoncons.cmake  libsodium.cmake  libzmq.cmake  lz4.cmake  opencv-cuda.cmake  opengl.cmake  openssl.cmake  spdlog.cmake
src/: main.cpp
src/Headers/: Constants.h  Version.h  boost_example.h  cgal_example.h  glad_example.h  glfw_example.h  glm_example.h  imgui_example.h  jsoncons_example.h  lz4_example.h  something.h
src/Headers/Core/: MessageData.h  ThreadBase.h
src/Headers/Examples/: boost.h  cgal.h  cppzmq.h  ffmpeg.h  glad.h  glfw.h  glm.h  gpu.h  imgui.h  jsoncons.h  lz4.h  opengl.h  openssl_crypto.h  openssl_ssl.h  spdlog.h
src/Headers/Utils/: Queue.h  Queue.md  ThreadConcepts.h  Utils.h
src/Source/: boost_example.cpp  cgal_example.cpp  glad_example.cpp  glfw_example.cpp  glm_example.cpp  imgui_example.cpp  jsoncons_example.cpp  lz4_example.cpp  main.cpp  something.cpp
src/Source/Examples/: boost.cpp  cgal.cpp  cppzmq.cpp  cuda.cu  glad.cpp  glfw.cpp  glm.cpp  hip.cu  imgui.cpp  jsoncons.cpp  lz4.cpp  opengl.cpp  openssl_crypto.cpp  openssl_ssl.cpp  spdlog.cpp
src/Source/Utils/: Utils.cpp
src/example1/: main.cpp
src/example1/include/: example1.hpp
src/example5/: main.cpp
